# experiments-with-gpt2

./: LICENSE  README.md  bert.py  bert_config.py  bert_utils.py  gpt.py  gpt_utils.py  pyproject.toml
language_models/: README.md  bert.py  bert_config.py  gpt.py  gpt_config.py  sentenceBERT.py  sentenceBERT_config.py
language_models/utils/: bert_utils.py  gpt_utils.py
lib/: baseEval.py  baseScheduler.py  baseTrainer.py  model_lib.py
rag/: README.md  benchmark_sts.ipynb  finetune_gpt_squad.ipynb  rag.py  sentenceBERT.py  simple_rag.ipynb  snliDataset.py  squadDataset.py  tdf.txt  train.py
sentiment-classification/: README.md  eval.py  reviewsDataset.py  sc_bert.py  sentiment_classification.ipynb  train.py  train_bert.py  train_config.py
sentiment_classification/: README.md  eval.py  reviewsDataset.py  sc_bert.py  sentiment_classification.ipynb  train_bert.py
vision_models/: README.md  cifar10.py  eval.py  resnet.py  resnet_config.py  train.py  train_cifar.ipynb  train_vit.py  vit.py  vit_config.py
