[project]
name = "experiments-with-gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "loralib>=0.1.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pynvml>=12.0.0",
    "ruff>=0.8.1",
    "tabulate>=0.9.0",
    "tensorboard-plugin-customizable-plots>=1.1.3",
    "tensorboard>=2.18.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "tqdm>=4.67.1",
    "datasets>=3.2.0",
    "ipywidgets>=8.1.5",
    "scipy>=1.14.1",
    "wandb>=0.19.1",
    "faiss-cpu>=1.9.0.post1",
    "nltk>=3.9.1",
    "torchvision>=0.20.1",
    "evaluate>=0.4.3",
    "click>=8.1.8",
]
